--- a/customdialoglib/src/main/res/drawable/edit_cursor_line.xml
+++ b/customdialoglib/src/main/res/drawable/edit_cursor_line.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 <size android:width="2dp" />
-<solid android:color="@color/black"  />
+<solid android:color="@color/sd_color_black"  />
 </shape>
