--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,14 @@
                 android:id="@+id/btn_bottom_popup_widow"
                 style="@style/MainButton"
                 android:text="仿IOS底部弹窗" />
-
+            <Button
+                android:id="@+id/btn_bottom_popup_widow1"
+                style="@style/MainButton"
+                android:text="仿IOS底部弹窗1" />
+            <Button
+                android:id="@+id/btn_bottom_popup_widow2"
+                style="@style/MainButton"
+                android:text="仿IOS底部弹窗2" />
             <Button
                 android:id="@+id/btn_edit_dialog"
                 style="@style/MainButton"
