--- a/customdialoglib/src/main/res/values/styles.xml
+++ b/customdialoglib/src/main/res/values/styles.xml
@@ -40,8 +40,8 @@
     </style>
     <!-- dialog底部弹出菜单动画 -->
     <style name="bottom_animation" parent="android:Animation">
-        <item name="@android:windowEnterAnimation">@anim/bottom_enter</item>
-        <item name="@android:windowExitAnimation">@anim/bottom_exit</item>
+        <item name="android:windowEnterAnimation">@anim/bottom_enter</item>
+        <item name="android:windowExitAnimation">@anim/bottom_exit</item>
     </style>
     <!--style of views  -->
     <style name="ViewLineHorizontal">
